tests/base/invalid/List_CompileFail_2.whiley
import * from whiley.lang.*

void ::main(System sys,[string] args):
     x = a2[0]
